--- a/2020-21-2/klienswebprog/myplaylist-app/package.json
+++ b/2020-21-2/klienswebprog/myplaylist-app/package.json
@@ -11,8 +11,12 @@
     "nedb": "^1.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.0"
   },
