--- a/2020-21-2/klienswebprog/myplaylist-app/package.json
+++ b/2020-21-2/klienswebprog/myplaylist-app/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.1.0"
   },
