--- a/2020-21-2/klienswebprog/myplaylist-app/package.json
+++ b/2020-21-2/klienswebprog/myplaylist-app/package.json
@@ -19,6 +19,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^2.0.3",
+    "socket.io-client": "^2.4.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
