--- a/2021-22-2/klienswp/04/package.json
+++ b/2021-22-2/klienswp/04/package.json
@@ -2,5 +2,12 @@
   "type": "module",
   "dependencies": {
     "cowsay": "^1.5.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   }
 }
