--- a/2022-23-2/klienswebprog/04/package.json
+++ b/2022-23-2/klienswebprog/04/package.json
@@ -1,6 +1,11 @@
 {
-  "type": "module",
   "dependencies": {
-    "cowsay": "^1.5.0"
+    "cowsay": "^1.5.0",
+    "rollup": "^3.20.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2"
   }
 }
